@@ -3,6 +3,7 @@
 		* MF: gen_tree fix, init EMF+ crafting 
 		* MF: fix saving of EMFs, more EMF+ crafting
 		* MF: EFM+ initial obj crafting
+		* EMF: parse public comment Begin/EndGroup
 
 2011-07-31  Valek Filippov
 
